[tool.poetry]
name = "guitk"
version = "0.2.1"
description = "Python GUI Toolkit for Tk (guitk): simplify the layout and construction of tkinter graphical user interfaces in python."
authors = ["Rhet Turnbull <rturnbull+git@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.13"
mkdocstrings-python = "^0.8.3"
bump2version = "^1.0.1"
markdownpp = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
